# angular-rust-compiler

./: .eslintrc.json  .gitmodules  .prettierignore  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml
.husky/: pre-commit
demo-app/: .gitignore  package-lock.json  package.json  tsconfig.rust.json  vite.config.mjs
demo-app/out-tsc/: main.js
demo-app/out-tsc/app/: app.config.js  app.js
demo-app/out-tsc/app/benchmark/: benchmark-0.component.js  benchmark-1.component.js  benchmark-10.component.js  benchmark-11.component.js  benchmark-12.component.js  benchmark-13.component.js  benchmark-14.component.js  benchmark-15.component.js  benchmark-16.component.js  benchmark-17.component.js  benchmark-18.component.js  benchmark-19.component.js  (+88 more)
demo-app/src/app/: app.css  app.html  app.routes.ts  app.ts
rust-builder/src/: index.ts
rust-builder/src/utils/: bundle-calculator.ts  check-port.ts  delete-output-dir.ts  i18n-options.ts  load-proxy-config.ts  load-translations.ts  normalize-asset-patterns.ts  normalize-cache.ts  normalize-optimization.ts  postcss-configuration.ts  project-metadata.ts  resolve-assets.ts  service-worker.ts  stats-table.ts  supported-browsers.ts  test-files.ts  version.ts  worker-pool.ts
scripts/: benchmark-ngtsc.js  debug-binding.js  test-binding-batch.js  test-binding.js
src/i18n/: digest.rs  extractor_merger.rs  i18n_ast.rs  i18n_html_parser.rs  i18n_parser.rs  message_bundle.rs  mod.rs  translation_bundle.rs
src/i18n/serializers/: mod.rs  placeholder.rs  serializer.rs  xliff.rs  xliff2.rs  xmb.rs  xml_helper.rs  xtb.rs
(+457 files in other folders)
