[workspace]
members = [
    "packages/compiler",
    "packages/compiler-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# NAPI-RS for Node.js bindings
# Note: optional flag is set in individual packages, not here
napi = "2.16"
napi-derive = "2.16"

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = { version = "2.0", features = ["serde"] }

# String processing
regex = "1.10"
once_cell = "1.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance
rayon = "1.10"
smallvec = "1.13"

# Bitflags for enum flags
bitflags = "2.5"

[workspace.build-dependencies]
napi-build = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
